Gave up on the .exe file. Kept the run.bat file